2007-09-05 beckerl <becker.larry@gmail.com>
		Fixed NullPointerException when Open Recent Project with no project
		window open.  Removed execute(context, file) from OpenProjectPlugin.
		com.vividsolutions.jump.workbench.ui.plugin.OpenProjectPlugIn.java
		org.openjump.core.ui.plugin.file.OpenRecentProjectPlugIn.java
		
2007-09-03 beckerl <becker.larry@gmail.com>
		Added menu icons to Save Selected Datasets,Save Dataset As,
		Delete Selected Items, Delete All Features, Remove Selected Layers,
		Add New Features, Zoom To Layer, and Cut Selected Items.
		org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.java
		org.openjump.core.ui.images.disk_multiple.png
		com.vividsolutions.jump.workbench.datasource.SaveDatasetAsPlugIn.java
		com.vividsolutions.jump.workbench.ui.images.disk.png
		com.vividsolutions.jump.workbench.ui.plugin.DeleteSelectedItemsPlugIn.java
		com.vividsolutions.jump.workbench.ui.plugin.DeleteAllFeaturesPlugIn.java
		com.vividsolutions.jump.workbench.ui.images.delete.png
		com.vividsolutions.jump.workbench.ui.plugin.RemoveSelectedLayersPlugIn.java
		com.vividsolutions.jump.workbench.ui.images.cross.png
		com.vividsolutions.jump.workbench.ui.plugin.AddNewFeaturesPlugIn.java
		com.vividsolutions.jump.workbench.ui.images.add.png
		com.vividsolutions.jump.workbench.ui.ZoomZoomToLayerPlugIn.java
		com.vividsolutions.jump.workbench.ui.images.zoom.gif
		com.vividsolutions.jump.workbench.ui.plugin.clipboard.CutSelectedItemsPlugIn.java
		com.vividsolutions.jump.workbench.ui.images.cut.gif
		com.vividsolutions.jump.workbench.JUMPConfiguration.java
		
2007-09-03 beckerl <becker.larry@gmail.com>
		* Moved menu item to more appropriate posiiton below Open Project.
		org.openjump.core.ui.plugin.file.OpenRecentProjectPlugIn.java
		
2007-09-01 beckerl <becker.larry@gmail.com>
        * Added an option to "Write world file" in the Save Image As dialog.
        I18N strings were added but need translation.